Update pages hyperlinks.

--- a/WebContent/CleanZone/css/style.css
+++ b/WebContent/CleanZone/css/style.css
@@ -12,7 +12,7 @@ body {
   position: relative;
   padding: 0;
   background-color: #F6F6F6;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', helvetica, arial;
   font-size: 12px;
   color: #555;
   opacity: 0;
@@ -30,7 +30,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', helvetica, arial;
   font-weight: 300;
 }
 a {
@@ -165,7 +165,7 @@ ul {
   clear: both;
 }
 .hthin {
-  font-family: "Raleway", Helvetica, sans-serif !important;
+  font-family: "Raleway", Helvetica, helvetica, arial !important;
   font-weight: 100 !important;
 }
 /*Pre & Code*/
@@ -176,7 +176,7 @@ pre {
 }
 /*CONTENT*/
 .cont h2 {
-  font-family: "Raleway", Helvetica, sans-serif;
+  font-family: "Raleway", Helvetica, helvetica, arial;
   font-size: 32px;
   font-weight: 100;
   line-height: 38px;
@@ -634,7 +634,7 @@ body.modal-open,
 .page-head h2 {
   margin-bottom: 5px;
   margin-top: 6px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', helvetica, arial;
   font-weight: 300;
   letter-spacing: -1px;
 }
@@ -2322,7 +2322,7 @@ div.dataTables_length label select {
   color: #333333;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Open Sans', Verdana, sans-serif;
+  font-family: 'Open Sans', Verdana, helvetica, arial;
   font-size: 11px;
   margin-right: 1.8%;
   margin-bottom: 15px;
@@ -2659,7 +2659,7 @@ div.dataTables_length label select {
 }
 .block-flat .header h3 {
   margin-top: 3px;
-  font-family: "Raleway", Helvetica, sans-serif;
+  font-family: "Raleway", Helvetica, helvetica, arial;
   font-weight: 200;
 }
 .block-flat .content {
@@ -2707,13 +2707,13 @@ div.dataTables_length label select {
 }
 .block .content h2,
 .widget-block .content h2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', helvetica, arial;
 }
 .block .header h2,
 .widget-block .header h2,
 .block-flat .header h2 {
   margin: 0;
-  font-family: "Raleway", Helvetica, sans-serif;
+  font-family: "Raleway", Helvetica, helvetica, arial;
   font-weight: 100;
   font-size: 29px;
   line-height: 38px;
@@ -4880,7 +4880,7 @@ button::-moz-focus-inner {
   background: transparent;
 }
 .gritter-item {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', helvetica, arial;
   background: transparent;
   color: #FFF;
   padding: 2px 20px 12px;
